<resources>
    <string name="app_name">FilmSearch</string>
    <string name="menu_favorites_title">Favourites</string>
    <string name="menu_watch_later_title">Watch later</string>
    <string name="menu_selections_title">Collections</string>
    <string name="image">Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="details_fab_favorites">details_fab_favorites</string>
    <string name="details_fab_share">details_fab_share</string>
    <string name="imageview">ImageView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>

    <string name="menu_settings_title_text">Settings</string>
    <string name="radio_button_popular">Popular</string>
    <string name="radio_button_top_rated">Top</string>
    <string name="radio_button_upcoming">Soon</string>
    <string name="radio_button_playing">In theaters</string>
    <string name="radio_group_header">Home page collection:</string>

    <string name="permission_storage">Action is not permitted. Please grant required permissions</string>
    <string name="downloaded_to_gallery">"Saved to Gallery"</string>
    <string name="open">Open Gallery</string>
    <string name="floatingactionbutton">FloatingActionButton</string>

</resources>