<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_outline_favorite_border_24"
        android:title="@string/menu_favorites_title"
        app:showAsAction="withText" />
    <item
        android:id="@+id/watch_later"
        android:icon="@drawable/ic_outline_watch_later_24"
        android:title="@string/menu_watch_later_title"
        app:showAsAction="withText" />
    <item
        android:id="@+id/selections"
        android:icon="@drawable/ic_outline_collections_24"
        android:title="@string/menu_selections_title"
        app:showAsAction="withText" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_outline_settings_24"
        android:title="@string/settings"
        app:showAsAction="withText" />
</menu>